--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,13 @@
            </li>
            <li>
             <a href="/authors/new">Add Authors</a>
-        </li>
+            </li>
+            <li>
+                <a href="/books">Books</a>
+            </li>
+            <li>
+             <a href="/books/new">Add Books</a>
+             </li>
        </ul>
    </nav> 
 </header>
